Switched to AngularJS und using Firebase

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -9,15 +9,15 @@
 }
 
 .mdl-layout__content {
-  padding: 16px;
+  //padding: 16px;
 }
 
 .page-content {
   .entry {
     margin-bottom: 1em;
 
-    &:last-child {
-      margin-bottom: 0;
-    }
+  &:last-child {
+     margin-bottom: 0;
+   }
   }
 }
