--- a/app/css/app.css
+++ b/app/css/app.css
@@ -4,12 +4,9 @@
 .mdl-layout__header-row {
   padding-left: 16px; }
 
-.mdl-layout__content {
-  padding: 16px; }
-
 .page-content .entry {
   margin-bottom: 1em; }
   .page-content .entry:last-child {
     margin-bottom: 0; }
 
-/*# sourceMappingURL=theme.css.map */
+/*# sourceMappingURL=app.css.map */
