--- a/app/css/app.css
+++ b/app/css/app.css
@@ -12,4 +12,7 @@
 .fav-star.inactive {
   color: #757575; }
 
+.soundboard .mdl-navigation .mdl-navigation__link {
+  padding-right: 0; }
+
 /*# sourceMappingURL=app.css.map */
