--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -33,3 +33,16 @@
     }
   }
 }
+
+#auth-dialog {
+  width: 325px;
+
+  .mdl-dialog__content {
+    button {
+      width: 100%;
+      color: #FFF;
+      text-align: center;
+      margin-top: .5em;
+    }
+  }
+}
