--- a/app/templates/soundboard.html
+++ b/app/templates/soundboard.html
@@ -1,6 +1,6 @@
 <div class="soundboard mdl-layout mdl-js-layout">
   <header class="mdl-layout__header mdl-layout__header--scroll">
-    <div class="mdl-layout__header-row">
+    <div class="mdl-layout__header-row max-width-container">
       <span class="mdl-layout-title">{{soundboard.title}} Soundboard</span>
 
       <div class="mdl-layout-spacer"></div>
@@ -23,7 +23,7 @@
     </div>
   </header>
   <main class="mdl-layout__content">
-    <div class="page-content">
+    <div class="page-content max-width-container">
       <!--<button ng-click="auth.$unauth()">Logout</button>-->
 
       <div class="mdl-list">
