--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -27,6 +27,10 @@
 }
 
 .soundboard {
+  .mdl-layout__header-row {
+    padding-right: 16px;
+  }
+
   .mdl-navigation {
     .mdl-navigation__link {
       padding-right: 0;
@@ -45,4 +49,9 @@
       margin-top: .5em;
     }
   }
+}
+
+.max-width-container {
+  max-width: 500px;
+  margin: 0 auto;
 }
