--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -36,6 +36,13 @@
       padding-right: 0;
     }
   }
+
+  .new-indicator {
+    color: red;
+    font-size: .75em;
+    position: relative;
+    top: -.5em;
+  }
 }
 
 #auth-dialog {
