--- a/app/templates/soundboard.html
+++ b/app/templates/soundboard.html
@@ -65,6 +65,8 @@
 </div>
 
 <dialog id="auth-dialog" class="mdl-dialog">
+  <i class="material-icons close-button" ng-click="closeAuthDialog()">close</i>
+
   <h4 class="mdl-dialog__title">Login</h4>
   <div class="mdl-dialog__content">
     <p>Um Favoriten speichern zu können, müssen Sie sich einloggen.</p>
