--- a/app/css/app.css
+++ b/app/css/app.css
@@ -23,6 +23,18 @@
   top: -.5em; }
 .soundboard .loader {
   text-align: center; }
+.soundboard .search {
+  text-align: center;
+  display: flex;
+  padding: 16px; }
+  .soundboard .search i {
+    padding: 21px 5px; }
+  .soundboard .search i:nth-of-type(1) {
+    margin-right: 16px; }
+  .soundboard .search div.mdl-textfield {
+    flex: 1; }
+  .soundboard .search i:nth-of-type(2) {
+    cursor: pointer; }
 
 #auth-dialog {
   width: 325px;
