--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -47,6 +47,28 @@
   .loader {
     text-align: center;
   }
+
+  .search {
+    text-align: center;
+    display: flex;
+    padding: 16px;
+
+    i {
+      padding: 21px 5px;
+    }
+
+    i:nth-of-type(1) {
+      margin-right: 16px;
+    }
+
+    div.mdl-textfield {
+      flex: 1;
+    }
+
+    i:nth-of-type(2) {
+      cursor: pointer;
+    }
+  }
 }
 
 #auth-dialog {
