--- a/app/templates/soundboard-list.html
+++ b/app/templates/soundboard-list.html
@@ -1,4 +1,4 @@
-<div class="mdl-layout mdl-js-layout">
+<div class="soundboard-list mdl-layout mdl-js-layout">
   <header class="mdl-layout__header mdl-layout__header--scroll">
     <div class="mdl-layout__header-row">
 
@@ -15,11 +15,25 @@
   <main class="mdl-layout__content">
     <div class="page-content">
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col-desktop" ng-repeat="entry in entries" ng-click="openSoundboard(entry.slug)">
-          <div class="entry-content" style="background: {{entry.color}}">
-            <img class="image" ng-src="{{entry.image}}">
-            <div class="title">{{entry.title}}</div>
+        <div class="mdl-cell mdl-cell--3-col-desktop" ng-repeat="board in entries">
+
+          <div class="mdl-card mdl-shadow--2dp">
+            <div class="image">
+              <img ng-src="./board-data/{{board.slug}}/images/{{board.image}}">
+            </div>
+            <div class="mdl-card__title mdl-card--expand">
+              <h2 class="mdl-card__title-text">{{board.title}}</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              {{board.shortDescription}}
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" ng-click="openSoundboard(board.slug)">
+                Zum Soundboard
+              </a>
+            </div>
           </div>
+
         </div>
 
       </div>
